hphp/hack/test/typecheck/yield_from_bad1.php.exp
File "yield_from_bad1.php", line 7, characters 3-16:
Invalid yield from (Typing[4110])
File "yield_from_bad1.php", line 6, characters 25-27:
Expected int
File "yield_from_bad1.php", line 3, characters 25-30:
But got string
File "classes.hhi", line 19, characters 63-64:
  via this generic Tk
File "interfaces.hhi", line 240, characters 60-61:
  via this generic Tk
